--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,30 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
 
-    - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          npm install -g pnpm
+          pnpm install
 
-    - name: Install dependencies
-      run: | 
-        npm install -g pnpm
-        pnpm install
+      - name: Build
+        run: npm run build
+        env:
+          DOC_ENV: production
+          NODE_OPTIONS: --max-old-space-size=4096
 
-    - name: Build
-      run: npm run build
-      env:
-        DOC_ENV: production
-        NODE_OPTIONS: --max-old-space-size=4096
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.3.4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: dist
+          force: true
+          commit-message: website deploy
+          repository-name: EralChen/simple-vuesri
 
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4.3.4
-      with:
-        token: ${{ secrets.sww_token }}
-        branch: gh-pages
-        folder: dist
-        force: true
-        commit-message: website deploy
-        repository-name: EralChen/simple-vuesri
-
-    - name: Cleanup
-      run: rm -rf docs/dist
-
+      - name: Cleanup
+        run: rm -rf docs/dist
