--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,39 @@
-# 将静态内容部署到 GitHub Pages 的简易工作流程
-name: Deploy static content to Pages
+name: Build and Deploy
 
 on:
-  # 仅在推送到默认分支时运行。
   push:
-    branches: ["main"]
-
-  # 这个选项可以使你手动在 Action tab 页面触发工作流
-  workflow_dispatch:
-
-# 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages。
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# 允许一个并发的部署
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches:
+      - main
 
 jobs:
-  # 单次部署的工作描述
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x" # node版本号
-          registry-url: "https://registry.npmjs.org"
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload dist repository
-          path: "./dist"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+
+    - uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: | 
+        npm install -g pnpm
+        pnpm install
+
+    - name: Build
+      run: npm run build
+      env:
+        DOC_ENV: production
+        NODE_OPTIONS: --max-old-space-size=4096
+
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4.3.4
+      with:
+        token: ${{ secrets.sww_token }}
+        branch: gh-pages
+        folder: dist
+        force: true
+        commit-message: website deploy
+        repository-name: EralChen/simple-vuesri
+
+    - name: Cleanup
+      run: rm -rf docs/dist
+
