--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
 
       # 部署到 GitHub Pages
       - name: Deploy
-        uses: crazy-max/ghaction-github-pages@v2
+        uses: JamesIves/github-pages-deploy-action@4.1.5 # 官方 GitHub Actions 部署到 GitHub Pages 的 Action
         env:
-          GITHUB_TOKEN: ${{ secrets.sww_token }} # ACCESS_TOKEN 是创建的 Secret 名称，替换为你自己创建的名称
+          GITHUB_TOKEN: ${{ secrets.sww_token }}
         with:
           target-branch: gh-pages # 部署到 gh-pages 分支，master 分支存放的是项目源码，而 gh-pages 分支则用来存放生成的静态文件
           build_dir: docs/.vuepress/dist # vuepress 生成的静态文件存放的地方
