--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@types/vue": "^2.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.7",
