--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
   # 这个选项可以使你手动在 Action tab 页面触发工作流
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages。
 permissions:
